--- a/Project2.css
+++ b/Project2.css
@@ -22,12 +22,20 @@
     box-sizing: border-box;
 }
 
+
 html,
 body {
     padding: 0;
     margin: 0;
 }
 
+.container {
+    max-width: 2000px;
+    width: 100%;
+    margin: auto;
+}
+
+/* MARK: Page 1 CSS */
 .bg-image {
     background-image: url('Burger\ image.png');
     width: 100%;
@@ -35,7 +43,8 @@ body {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    max-width: 2000px;
+    display: flex;
+    flex-direction: column;
 }
 
 .logo {
@@ -78,6 +87,7 @@ hr {
     box-shadow: 10px 10px 20px rgba(149, 3, 3, 0.714);
 }
 
+/* MARK: Page 2 CSS */
 .content {
     position: absolute;
     top: 470px;
@@ -129,7 +139,8 @@ hr {
 .second-frame {
     height: 900px;
     width: 100%;
-    max-width: 2000px;
+    display: flex;
+    flex-direction: column;
     background-color: #edb65a;
 }
 
@@ -174,10 +185,13 @@ hr {
     transition: all 0.5s ease;
 }
 
+.three-images img {
+    border-radius: 10px;
+}
+
 #pic1 h1 {
     text-align: left;
     padding-bottom: 30px;
-
 }
 
 #pic1 h1 {
@@ -198,6 +212,7 @@ hr {
     color: white;
 }
 
+/* MARK: Page 3 CSS */
 .Blur-image {
     background-image: url('blur-buger-image.png');
     width: 100%;
@@ -205,7 +220,8 @@ hr {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    max-width: 2000px;
+    display: flex;
+    flex-direction: column;
     text-align: center;
 }
 
@@ -229,7 +245,7 @@ hr {
     font-weight: 100;
 }
 
-
+/* MARK: Page 4 CSS */
 .kfc-burgers {
     background-image: url('shape\ 2.png');
     width: 100%;
@@ -237,9 +253,9 @@ hr {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    max-width: 2000px;
     text-align: center;
-    max-width: 2000px;
+    display: flex;
+    flex-direction: column;
 }
 
 #bg-burger {
@@ -261,35 +277,53 @@ hr {
     padding-left: 20px;
 }
 
-.Read-more-section {
-    height: 795px;
+#Two-layer-burger2:hover {
+    transform: scale(1.1);
+    transition: all 0.3s ease-in-out;
+}
+
+#classic-bu:hover {
+    transform: scale(1.1);
+    transition: all 0.3s ease-in-out;
+}
+
+/* MARK: Page 6 CSS */
+.frame5 {
+    background-image: url('Rectangle\ 2.0.png');
     width: 100%;
-    max-width: 2000px;
-    background-color: #edb65a;
-    padding: 50px 70px;
+    height: 780px;
+    display: flex;
     align-items: center;
+    justify-content: space-around;
 }
 
-#image img {
+#big-burger-img {
+    display: flex;
     float: right;
+    border-radius: 20px;
 }
 
-#heading1 {
-    padding: 130px 40px;
-}
-
-#heading1 h1 {
-    font-size: 60px;
-    font-family: 'Breda Two', sans-serif;
+#text-frame5 h1 {
+    max-width: max-content;
     color: #910115;
-    letter-spacing: 3px;
+    font-size: 70px;
+    font-family: 'Breda Two', sans-serif;
 }
 
-#heading1 p {
-    font-size: 37px;
+#text-frame5 p {
+    max-width: max-content;
+    font-size: 41px;
     font-family: 'Breda Two', sans-serif;
-    padding-top: 40px;
-    letter-spacing: 2px;
+    font-weight: 100;
+}
+
+#text-frame5 {
+    max-height: max-content;
+}
+
+#frame5-img {
+    max-width: min-content;
+    float: right;
 }
 
 #btn3 {
@@ -300,12 +334,13 @@ hr {
     border: none;
     font-size: 40px;
     font-family: 'Breda Two', sans-serif;
-    border-radius: 50px;
+    border-radius: 60px;
 }
 
 #button3 {
     margin-top: 40px;
     margin-left: 290px;
+    max-width: 450px;
 }
 
 #btn3:hover {
@@ -313,10 +348,10 @@ hr {
     transition: all 0.7s ease;
 }
 
+/* MARK: Page 7 CSS */
 .frame6 {
     background-image: url('red-shape-big.png');
     height: 810px;
-    max-width: 2000px;
     display: flex;
     flex-direction: column;
 }
@@ -329,59 +364,61 @@ hr {
     padding-top: 30px;
 }
 
-#para-left {
-    max-width: 400px;
+#corner-text {
+    max-width: max-content;
+    max-height: max-content;
+    color: white;
+    font-family: 'Breda Two', sans-serif;
+    font-weight: 100;
+    justify-content: space-between;
 }
 
-#para-right {
-    max-width: 400px;
-    float: right;
-}
-
-#para-left-bottom {
-    max-width: 400px;
-}
-
-#para-right-bottom {
-    max-width: 400px;
-    float: right;
-}
-
-
-#center-image1 {
+#hold-it {
     display: flex;
     justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin-left: 140px;
-
 }
 
-#platter {
-    margin-top: -290px;
+#img {
+    display: flex;
+    margin: 0;
+    padding: 0;
+}
+
+#corner-text {
+    display: flex;
+}
+
+.platee {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 40px;
+}
+
+#left-bottom {
+    padding-top: 300px;
+}
+
+#right-text {
+    padding-left: 49px;
+}
+
+
+#complex-img {
     filter: drop-shadow(0px 10px 90px rgba(255, 255, 255));
 }
 
-#dots-bottom {
-    display: flex;
-    gap: 470px;
-    margin-top: -280px;
-}
-
-#dots-top {
-    display: flex;
-    gap: 680px;
-    margin-top: -240px;
-}
-
-
-
+/* MARK: Page 8 CSS */
 .frame7 {
     background-image: url('Blur-burger2.png');
     background-repeat: no-repeat;
     background-size: cover;
     height: 500px;
-    max-width: 2000px;
+    display: flex;
+    flex-direction: column;
+}
+
+#heading7 {
+    text-align: center;
 }
 
 #heading7 h1 {
@@ -390,6 +427,11 @@ hr {
     color: white;
     text-align: center;
     padding-top: 30px;
+}
+
+.frame7 {
+    align-items: center;
+    gap: 50px;
 }
 
 #first-input {
@@ -419,11 +461,12 @@ hr {
 }
 
 #text-box-section {
-    padding-left: 480px;
-    padding-top: 60px;
-
+    max-width: max-content;
 }
 
+#text-box-section input {
+    border-radius: 10px;
+}
 
 #button4 {
     background-color: #910115;
@@ -437,24 +480,37 @@ hr {
     margin-left: 120px;
 }
 
+#button4:hover {
+    box-shadow: 0px 12px 20px rgba(189, 6, 6, 0.714);
+    transition: all 0.7s ease;
+}
+
+/* MARK: Page 9 CSS */
 iframe {
     width: 100%;
     height: 500px;
-    max-width: 2000px;
+    display: flex;
+    flex-direction: column;
 }
 
-.footer {
+/* MARK: Page 10 CSS */
+.Bottom-work {
     background-image: url('footer-black.png');
     width: 100%;
     height: 585px;
-    max-width: 2000px;
 }
 
-.footer {
-    display: flex;
-    justify-content:space-around;
-    align-items: center;
+#bottom-nav li {
+    max-width: max-content;
+}
 
+#bottom-nav {
+    display: flex;
+    gap: 40px;
+    align-items: center;
+    text-align: center;
+    justify-content: space-around;
+    padding-top: 130px;
 }
 
 #bottom-nav ul {
@@ -462,6 +518,7 @@ iframe {
     font-family: 'Breda Two', sans-serif;
     color: white;
     list-style: none;
+    max-width: max-content;
 }
 
 #typebar {
@@ -471,11 +528,22 @@ iframe {
     font-family: 'Breda Two', sans-serif;
 }
 
+#search-bar input {
+    border-radius: 10px;
+}
+
 #search-bar {
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
+}
+
+#frame-search {
+    width: auto;
     gap: 10px;
+    display: flex;
+
 }
 
 #search-button {
@@ -486,34 +554,37 @@ iframe {
     border: none;
     font-size: 20px;
     font-family: 'Breda Two', sans-serif;
+    border-radius: 10px;
 }
 
 #search-button:hover {
     box-shadow: 0px 12px 30px rgba(149, 3, 3, 0.838);
     transition: all 0.7s ease;
 }
+
 #three-logos {
-   color: white;
- 
+    color: white;
+    font-family: 'Breda Two', sans-serif;
+    font-size: 25px;
 }
 
-#logo-text1 {
+#img-text {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 10px;
+}
+
+#last-text p {
+    color: white;
+    font-family: 'Breda Two', sans-serif;
+    font-size: 25px;
+    max-width: max-content;
+
+}
+
+#last-text {
+    padding-top: 70px;
     display: flex;
     justify-content: center;
-    align-items: center;
 }
-
-#logo-text2 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    float: left;
-}
-
-#logo33 p {
-   display: flex;
-   justify-content: center;
-   text-align: center;
-   align-items: center;
-}
-
