--- a/index1.css
+++ b/index1.css
@@ -1,12 +1,12 @@
 * {
-    padding: 0;
     margin: 0;
+    padding: 0;
 }
 
 body {
-    background: linear-gradient(-45deg, #1f4037, #2c5364, #99f2c8, #1f4037);
-    background-size: 700%;
-    animation: animate 20s ease infinite alternate;
+    background: radial-gradient(circle at center, #1e3c72, #2a5298, #6a11cb, #2575fc);
+    background-size: 400% 400%;
+    animation: animate 12s ease infinite;
 }
 
 @keyframes animate {
@@ -23,38 +23,78 @@ body {
     }
 }
 
+.logo_text {
+    display: flex;
+    gap: 10px;
+    color: white;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 22px;
+    align-items: center;
+}
+
 .navbar {
-    background-color: rgba(255, 255, 255, 0.204);
+    display: flex;
+    justify-content: space-evenly;
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.164);
+}
+
+.navbar ul {
+    display: flex;
+    gap: 40px;
+    font-size: 22px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+    align-items: center;
+}
+
+.navbar a {
+    color: white;
+    list-style: none;
+    text-decoration: none;
+    padding: 10px;
+}
+
+.navbar a:hover {
+    background-color: rgb(48, 176, 235);
+    border-radius: 10px;
+    transition: 0.5s all ease-out;
+}
+
+.main-content {
+    color: white;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding: 30px;
+}
+
+.buttons_sections {
     display: flex;
     gap: 30px;
-    align-items: center;
-    padding:20px;
-    justify-content: space-around;
+    padding: 20px;
 }
 
-.nav-logo-text {
-    display: flex;
-    align-items: center;
-}
-
-.nav-section ul {
-    list-style: none;
-    font-size: 24px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-weight: 500;
-    display: flex;
-    gap: 50px;
-
-}
-
-.nav-section a {
-    color: black;
+#btn1 {
     text-decoration: none;
-       border-radius: 30px;
-    padding: 10px ;
+    list-style: none;
+    color: white;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    background-color: rgb(35, 167, 243);
+    padding: 12px;
+    border-radius: 10px;
 }
 
-.nav-section a:hover {
-    background-color: white;
- 
+#btn1:hover{
+    background-color:rgb(240, 43, 29);
+}
+
+.image {
+    display: flex;
+    justify-content: center;
+}
+.image img {
+    width: 40%;
+    height: 400px;
+    border-radius: 40px;
 }
