--- a/report_found.css
+++ b/report_found.css
@@ -4,10 +4,39 @@
 }
 
 body {
-    background-color: #576F72;
+
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background: radial-gradient(circle at center, #DDF4E7, #67C090, #26667F, #124170);
+    background-size: 400% 400%;
+    animation: animate 12s ease infinite;
 }
 
+@keyframes animate {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    50% {
+        background-position: 100% 50%;
+    }
+
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+html,
+body {
+
+    padding: 0;
+    margin: 0;
+}
+
+.container {
+    max-width: 2000px;
+    width: 100%;
+    margin: auto;
+}
 
 .logo_text {
     display: flex;
@@ -197,9 +226,10 @@ body {
     height: 50px;
 }
 
-.date_time_sec{
+.date_time_sec {
     padding-top: 20px;
 }
+
 .date_time_sec h2 {
     font-size: 28px;
     padding-bottom: 10px;
@@ -221,9 +251,10 @@ body {
     text-decoration: none;
 }
 
-.found_location{
+.found_location {
     padding: 10px;
 }
+
 .found_location h2 {
     padding-bottom: 10px;
     font-size: 28px;
@@ -270,4 +301,112 @@ body {
     padding: 10px;
 }
 
-dfsdf
+.fill_sec {
+    width: 800px;
+    margin: 0 auto;
+}
+
+.search_header h1 {
+    font-size: 40px;
+    text-align: center;
+    padding: 30px;
+    color: white;
+}
+
+.search_sec {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+}
+
+.search_sec input {
+    width: 450px;
+    padding: 10px;
+    font-size: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.search_sec i {
+    font-size: 20px;
+    background-color: rgb(146, 146, 146);
+    padding: 14px;
+    border-radius: 0px 10px 10px 0px;
+}
+
+.section_part {
+    display: inline-block;
+    gap: 30px;
+    padding-top: 40px;
+    width: 100%;
+    text-align: left;
+}
+
+.firs {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    padding: 10px;
+    width: fit-content;
+}
+
+.seco {
+    display: flex;
+    justify-content: center;
+    gap: 17px;
+    padding: 10px;
+    width: fit-content;
+}
+
+.thir {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+    padding: 10px;
+    width: fit-content;
+}
+
+.thir input {
+    width: 237px;
+    padding: 5px;
+    font-size: 18px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.section_part select {
+    width: 250px;
+    padding: 5px;
+    font-size: 18px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.date_Sec {
+    padding: 10px;
+    width: fit-content;
+}
+
+.image_containers1{
+    padding: 10px;
+    display: flex;
+    gap: 30px;
+}
+
+.frame1{
+    width: 230px;
+    height: 300px;
+    background-color: #ffffff;
+    border: 10px;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.frame1 img{
+    border-radius: 30px;
+    padding: 20px;
+}
+
+.image_containers2{
+    padding: 10px;
+    display: flex;
+    gap: 30px;
+}
