--- a/report_lost.css
+++ b/report_lost.css
@@ -4,9 +4,24 @@
 }
 
 body {
-    background-color: rgb(250, 243, 219);
+    color: rgb(0, 0, 0);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+     background: linear-gradient(-45deg, #D3EBCD, #AEDBCE, #839AA8,#635666);
+            background-size: 400% 400%;
+            animation: jungleGradient 20s ease infinite;
 }
+
+   @keyframes jungleGradient {
+            0% {
+                background-position: 0% 50%;
+            }
+            50% {
+                background-position: 100% 50%;
+            }
+            100% {
+                background-position: 0% 50%;
+            }
+        }
 
 html,
 body {
@@ -34,7 +49,7 @@ body {
     display: flex;
     justify-content: space-evenly;
     padding: 20px;
-    background-color: rgba(0, 0, 0, 0.164);
+    background-color: #ffffff7e;
 }
 
 .navbar ul {
@@ -84,7 +99,7 @@ body {
     width: 700px;
     font-size: 17px;
     padding: 6px;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 #item_categ {
@@ -109,8 +124,8 @@ body {
     padding: 10px;
 }
 
-#discription_section h2{
-   padding-bottom: 10px;
+#discription_section h2 {
+    padding-bottom: 10px;
 }
 
 #upload_section {
@@ -122,7 +137,7 @@ body {
     width: fit-content;
 }
 
-#browse h3{
+#browse h3 {
     padding: 3px;
 }
 
@@ -133,7 +148,7 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-#meeting{
+#meeting {
     height: 25px;
     font-size: 18px;
 }
@@ -148,14 +163,14 @@ body {
     padding: 8px
 }
 
-.contact_info{
+.contact_info {
     padding-top: 20px;
     padding: 10px;
 }
 
 .input_holder {
     display: grid;
-    grid-template-columns: repeat(2, 1fr); 
+    grid-template-columns: repeat(2, 1fr);
     gap: 10px;
     padding-top: 20px;
 }
@@ -164,7 +179,7 @@ body {
     padding: 8px;
 }
 
-.button{
+.button {
     padding-top: 20px;
     padding: 10px;
 }
@@ -178,4 +193,3 @@ body {
     width: 180px;
     height: 50px;
 }
-
