--- a/report_lost.css
+++ b/report_lost.css
@@ -4,24 +4,27 @@
 }
 
 body {
-    color: rgb(0, 0, 0);
+
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-     background: linear-gradient(-45deg, #D3EBCD, #AEDBCE, #839AA8,#635666);
-            background-size: 400% 400%;
-            animation: jungleGradient 20s ease infinite;
+    background: linear-gradient(60deg, #ff007f, #8e2de2, #4a00e0, #8e2de2, #ff007f);
+    background-size: 300% 300%;
+    animation: cosmicGradient 22s ease infinite;
+    color: white;
 }
 
-   @keyframes jungleGradient {
-            0% {
-                background-position: 0% 50%;
-            }
-            50% {
-                background-position: 100% 50%;
-            }
-            100% {
-                background-position: 0% 50%;
-            }
-        }
+@keyframes cosmicGradient {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    50% {
+        background-position: 100% 50%;
+    }
+
+    100% {
+        background-position: 0% 50%;
+    }
+}
 
 html,
 body {
@@ -75,7 +78,7 @@ body {
 }
 
 .main_section2 {
-    color: rgb(0, 0, 0);
+    color:white;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     display: flex;
     justify-content: center;
@@ -128,8 +131,19 @@ body {
     padding-bottom: 10px;
 }
 
+#description {
+    font-size: 18px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 #upload_section {
     display: flex;
+    padding: 10px;
+}
+
+#upload_section a{
+    color: white;
+    font-size: 30px;
     padding: 10px;
 }
 
@@ -160,7 +174,9 @@ body {
 
 .location_section input {
     width: 400px;
-    padding: 8px
+    padding: 8px;
+    font-size: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .contact_info {
@@ -177,6 +193,8 @@ body {
 
 .input_holder input {
     padding: 8px;
+    font-size: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .button {
@@ -192,4 +210,39 @@ body {
     font-size: 18px;
     width: 180px;
     height: 50px;
+}
+
+.first_footer {
+    margin-top: 40px;
+    background-color: #EFEFEF;
+    height: 150px;
+    width: 100%;
+    display: flex;
+    gap: 320px;
+    justify-content: center;
+    align-items: center;
+}
+
+.copyright_sec {
+    color: black;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.icons {
+    display: flex;
+    gap: 30px;
+}
+
+.icons {
+  padding-right: 110px;
+}
+
+.footer_nav a {
+    text-decoration: none;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+    display: block;
+    gap: 20px;
+    color: black;
+    padding-right: 30px;
 }
