--- a/report_found.css
+++ b/report_found.css
@@ -6,23 +6,25 @@
 body {
 
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background: linear-gradient(60deg, #ff007f,#8e2de2, #4a00e0, #8e2de2, #ff007f);
+    background: linear-gradient(60deg, #ff007f, #8e2de2, #4a00e0, #8e2de2, #ff007f);
     background-size: 300% 300%;
     animation: cosmicGradient 22s ease infinite;
     color: white;
 }
 
-  @keyframes cosmicGradient {
-            0% {
-                background-position: 0% 50%;
-            }
-            50% {
-                background-position: 100% 50%;
-            }
-            100% {
-                background-position: 0% 50%;
-            }
-        }
+@keyframes cosmicGradient {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    50% {
+        background-position: 100% 50%;
+    }
+
+    100% {
+        background-position: 0% 50%;
+    }
+}
 
 html,
 body {
@@ -275,6 +277,11 @@ body {
     font-size: 28px;
 }
 
+.founder_info input {
+    font-size: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 .fill_section {
     font-size: 23px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -385,7 +392,17 @@ body {
 .date_Sec {
     padding: 10px;
     width: fit-content;
+    display: flex;
+    gap: 70px;
 }
+
+.date_Sec input{
+    width: 190px;
+    height: 30px;
+    font-size: 17px;
+}
+
+
 
 .image_containers1 {
     padding: 10px;
@@ -394,9 +411,9 @@ body {
 }
 
 .frame1 {
-    width: 230px;
+    width: 300px;
     height: 300px;
-    background-color: #F8F8F8 ;
+    background-color: #F8F8F8;
     border: 10px;
     border-radius: 20px;
     color: #333333;
@@ -405,7 +422,7 @@ body {
 
 .frame1 img {
     border-radius: 30px;
-    padding: 20px;
+    padding: 10px;
 }
 
 .image {
@@ -424,8 +441,22 @@ body {
 }
 
 .detl1 {
-    padding-top: 6px;
+    padding-top: 7px;
     padding-left: 20px;
+    display:grid;
+    gap: 8px;
+    grid-template-columns: 90px auto;
+}
+
+.detl1 h3 {
+    display: flex;
+    gap: 30px;
+}
+
+.detl1 span {
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+    font-size: 18px;
+    font-weight:800;
 }
 
 .claim_btn {
@@ -440,6 +471,42 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 18px;
     border-radius: 6px;
-    background-color: #8E2DE2 ;
+    background-color: #8E2DE2;
     color: white;
+}
+
+.first_footer {
+    margin-top: 40px;
+    background-color: #EFEFEF;
+    height: 150px;
+    width: 100%;
+    display: flex;
+    gap: 320px;
+    justify-content: center;
+    align-items: center;
+}
+
+.copyright_sec {
+    color: black;
+    padding: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.icons {
+    display: flex;
+    gap: 30px;
+}
+
+.icons {
+    padding-right: 110px;
+}
+
+.footer_nav a {
+    text-decoration: none;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+    display: block;
+    gap: 20px;
+    color: black;
+    padding-right: 30px;
 }
